# polari

./: .gitignore  configure.ac
data/: Makefile.am  org.gnome.Polari.desktop.in  polari.gresource.xml
data/resources/: application.css  initial-setup.ui  message-user-dialog.ui
po/: POTFILES.in
src/: Makefile.am  appNotifications.js  application.js  chatView.js  config.js.in  connections.js  entryArea.js  initialSetupWindow.js  mainWindow.js  messageDialog.js  polari.c  polari.gresource.xml  roomList.js  tabCompletion.js  userList.js
src/lib/: polari-room.c
